[tool.poetry]
name = "pytest-ayon"
version = "0.1.0"
description = "A pytest plugin for testing AYON and its components."
authors = ["YNPUT, s.r.o. <team@ynput.io>"]
readme = "README.md"
license = "Apache-2.0"
repository = "https://github.com/ynput/pytest-ayon"
homepage = "https://github.com/ynput/pytest-ayon"
keywords = ["pytest", "ayon", "testing", "development"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Topic :: Software Development :: Testing",
    "Framework :: Pytest",
]

[tool.poetry.plugins.pytest11]
ayon = "pytest_ayon.plugin"

[tool.poetry.dependencies]
python = ">=3.6.5"
pytest = "^7.0"
ayon-python-api = "*"
requests = "^2.17"

[tool.poetry.dev-dependencies]
python= "^3.9"
ruff = "^0.0.17"
pre-commit = "^2.17"
codespell = "^2"
pydantic = "^1.9"
pytest-cov = "^4.0"
pytest-print = "^0.3"
pydocstyle = "*"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
# Exclude a variety of commonly ignored directories.
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".ipynb_checkpoints",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pyenv",
    ".pytest_cache",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    ".vscode",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "site-packages",
    "venv",
    "vendor",
    "generated",
]

# Same as Black.
line-length = 79
indent-width = 4
# Assume Python 3.9
target-version = "py39"

[tool.ruff.lint]
# Enable Pyflakes (`F`) and a subset of the pycodestyle (`E`)  codes by default.
select = ["E4", "E7", "E9", "F"]
ignore = []
# Allow fix for all enabled rules (when `--fix`) is provided.
fixable = ["ALL"]
unfixable = []
# Allow unused variables when underscore-prefixed.
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.format]
# Like Black, use double quotes for strings.
quote-style = "double"
# Like Black, indent with spaces, rather than tabs.
indent-style = "space"
# Like Black, respect magic trailing commas.
skip-magic-trailing-comma = false
# Like Black, automatically detect the appropriate line ending.
line-ending = "auto"

[tool.codespell]
# Ignore words that are not in the dictionary.
ignore-words-list = "ayon,ynput"
skip = "./.*"
count = true
quiet-level = 3
